--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,7 +8,7 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
-    server: admin.arzonhost.ir
+    server: 172.67.223.242
     port: 2086
     cipher: auto
     uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
@@ -21,12 +21,20 @@ proxies:
       headers:
         host: admin.arzonhost.ir
   - &id002
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 167.88.61.235
-    port: 6679
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    type: vmess
+    server: admin.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: admin.arzonhost.ir
   - &id003
     name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
@@ -43,7 +51,7 @@ proxies:
       headers:
         host: mizban.arzonhost.ir
   - &id004
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
     type: vmess
     server: 104.21.4.14
     port: 2086
@@ -58,25 +66,60 @@ proxies:
       headers:
         host: admin.arzonhost.ir
   - &id005
+    name: 🇺🇸_US_美国_1
+    type: trojan
+    server: 23.142.200.175
+    port: 443
+    udp: true
+    password: 27876_t7d7f4e3f
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 185.236.233.111
+    port: 2053
+    udp: true
+    password: ba74833c-8c0f-4dcd-8cbc-13e3c32d3765
+    sni: ftp.debian.org
+    skip-cert-verify: true
+    network: tcp
+  - &id007
     name: 🇺🇸_US_美国_2
     type: ss
-    server: 167.88.61.159
-    port: 9101
-    password: e4FCWrgpkji3QY
-    cipher: aes-256-gcm
-  - &id006
-    name: 🇱🇺_LU_卢森堡
+    server: 34.221.163.96
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id008
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
     type: vmess
-    server: 78.111.102.232
-    port: 3389
+    server: tu.mahilu.site
+    port: 2095
     cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: http
-  - &id007
-    name: 🇦🇪_AE_阿联酋
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tu.mahilu.site
+  - &id009
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id010
+    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
     port: 8880
@@ -90,8 +133,48 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id008
+  - &id011
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: 104.21.94.251
+    port: 80
+    cipher: auto
+    uuid: c7421a39-020d-4a01-97ed-9eacbce0a7ca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: de2.xv2ray.net
+  - &id012
+    name: 🇬🇮_GI_直布罗陀
+    type: trojan
+    server: de2.trojanvpn.de
+    port: 2053
+    udp: true
+    password: f37a931d-7092-48fe-b82f-a98da3040eb2
+    sni: de2.trojanvpn.de
+    skip-cert-verify: true
+    network: tcp
+  - &id013
     name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 172.67.116.48
+    port: 80
+    cipher: auto
+    uuid: 22a13aa2-4854-44cb-e090-ec71ab84b1ff
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: wap.hostmjj.com
+  - &id014
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: yh3.freeh1.xyz
     port: 8080
@@ -105,52 +188,19 @@ proxies:
       path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
       headers:
         host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id009
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: 95.164.33.62
-    port: 443
-    udp: true
-    password: 0b1371aa-649d-41dc-9126-338c87936500
-    sni: sourceforge.net
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /websocket
-      headers:
-        host: sourceforge.net
-  - &id010
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+  - &id015
+    name: 🇱🇺_LU_卢森堡
     type: vmess
-    server: 172.67.223.242
-    port: 2086
+    server: 78.111.102.232
+    port: 3389
     cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
-  - &id011
+    network: http
+  - &id016
     name: 🇺🇸_US_美国_5
-    type: vmess
-    server: cdn.vds-server.ir
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: cdn.vds-server.ir
-  - &id012
-    name: 🇺🇸_US_美国_6
     type: vmess
     server: 162.159.137.249
     port: 8080
@@ -164,68 +214,6 @@ proxies:
       path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
       headers:
         host: nest-emily-healing-h.trycloudflare.com
-  - &id013
-    name: 🇺🇸_US_美国_7
-    type: trojan
-    server: 23.142.200.175
-    port: 443
-    udp: true
-    password: 27876_t7d7f4e3f
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id015
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 162.159.7.226
-    port: 8080
-    cipher: auto
-    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
-      headers:
-        host: technological-mel-fill-decide.trycloudflare.com
-  - &id016
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2082
-    cipher: auto
-    uuid: 203cea12-57fe-49c6-9e5b-906d2260ef12
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/CuTy87zAzV/
-      headers:
-        host: us4Bb5oSgJA.fzbqfrse.xyz
-  - &id017
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 207.148.10.248
-    port: 47918
-    cipher: auto
-    uuid: 232aeb1e-7d67-4a91-9379-4da1f4917691
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -268,7 +256,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -290,7 +277,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
   - name: SELECT
     type: select
     proxies:
@@ -310,7 +296,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
