--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,7 +8,7 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
-    server: 172.67.223.242
+    server: 104.21.4.14
     port: 2086
     cipher: auto
     uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
@@ -36,7 +36,36 @@ proxies:
       headers:
         host: admin.arzonhost.ir
   - &id003
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    type: vmess
+    server: 172.67.223.242
+    port: 2086
+    cipher: auto
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: admin.arzonhost.ir
+  - &id004
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: qin15.rong1104.uk
+    port: 2053
+    cipher: auto
+    uuid: 869caccc-12af-4276-f458-366fa256f8a0
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: qin15.rong1104.uk
+    network: ws
+    ws-opts:
+      path: /qin15
+  - &id005
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
     server: mizban.arzonhost.ir
     port: 2086
@@ -50,13 +79,28 @@ proxies:
       path: /
       headers:
         host: mizban.arzonhost.ir
-  - &id004
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+  - &id006
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 104.21.4.14
-    port: 2086
+    server: yh3.freeh1.xyz
+    port: 8080
     cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      headers:
+        host: larger-marketing-amounts-skin.trycloudflare.com
+  - &id007
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+    type: vmess
+    server: cdn.vds-server.ir
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -64,17 +108,23 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: admin.arzonhost.ir
-  - &id005
-    name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 23.142.200.175
-    port: 443
-    udp: true
-    password: 27876_t7d7f4e3f
+        host: cdn.vds-server.ir
+  - &id008
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_4
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id006
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id009
     name: 🇷🇺_RU_俄罗斯联邦
     type: trojan
     server: 185.236.233.111
@@ -84,40 +134,6 @@ proxies:
     sni: ftp.debian.org
     skip-cert-verify: true
     network: tcp
-  - &id007
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 34.221.163.96
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
-    type: vmess
-    server: tu.mahilu.site
-    port: 2095
-    cipher: auto
-    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tu.mahilu.site
-  - &id009
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
   - &id010
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
@@ -134,32 +150,30 @@ proxies:
       headers:
         host: food.zhaal.ir
   - &id011
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    name: 🇺🇸_US_美国_3
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id012
+    name: 🇱🇺_LU_卢森堡
     type: vmess
-    server: 104.21.94.251
-    port: 80
+    server: 78.111.102.232
+    port: 3389
     cipher: auto
-    uuid: c7421a39-020d-4a01-97ed-9eacbce0a7ca
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: de2.xv2ray.net
-  - &id012
-    name: 🇬🇮_GI_直布罗陀
-    type: trojan
-    server: de2.trojanvpn.de
-    port: 2053
-    udp: true
-    password: f37a931d-7092-48fe-b82f-a98da3040eb2
-    sni: de2.trojanvpn.de
-    skip-cert-verify: true
-    network: tcp
+    network: http
   - &id013
-    name: 🇺🇸_US_美国_3
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: 172.67.116.48
     port: 80
@@ -174,32 +188,81 @@ proxies:
       headers:
         host: wap.hostmjj.com
   - &id014
-    name: 🇺🇸_US_美国_4
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
     type: vmess
-    server: yh3.freeh1.xyz
-    port: 8080
+    server: tu.mahilu.site
+    port: 2095
     cipher: auto
-    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      path: /
       headers:
-        host: larger-marketing-amounts-skin.trycloudflare.com
+        host: tu.mahilu.site
   - &id015
-    name: 🇱🇺_LU_卢森堡
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
     type: vmess
-    server: 78.111.102.232
-    port: 3389
+    server: 172.64.141.219
+    port: 80
     cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    uuid: 1cfaad16-d2ba-4c49-af07-d7b9f11f43d0
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: http
+    network: ws
+    ws-opts:
+      path: /xn--mes53ddysu0o3gl
+      headers:
+        host: ru327.xn--mes53ddysu0o3gl.top
   - &id016
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+    type: vmess
+    server: yh2.freeh1.xyz
+    port: 8080
+    cipher: auto
+    uuid: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
+      headers:
+        host: pcs-referenced-camera-concerns.trycloudflare.com
+  - &id017
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_5
+    type: vmess
+    server: 104.21.8.157
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id018
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 23.227.38.23
+    port: 8080
+    cipher: auto
+    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
+      headers:
+        host: uh-lawyers-instruments-kernel.trycloudflare.com
+  - &id019
     name: 🇺🇸_US_美国_5
     type: vmess
     server: 162.159.137.249
@@ -256,6 +319,9 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -277,6 +343,9 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
   - name: SELECT
     type: select
     proxies:
@@ -296,6 +365,9 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
